--- a/rtutorial.html
+++ b/rtutorial.html
@@ -327,7 +327,7 @@ div.tocify {
   <a href="shinytutorial.html">Tutorial with Shiny</a>
 </li>
 <li>
-  <a href="https://jasonyeung.shinyapps.io/virema/">ViReMa Web App</a>
+  <a href="https://routhlab.shinyapps.io/ViReMaShiny/">ViReMa Web App</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -338,7 +338,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/jayeung12/">
+  <a href="https://github.com/routhlab/ViReMaShiny">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
