Changing links and some content

--- a/index.html
+++ b/index.html
@@ -281,7 +281,9 @@ $(document).ready(function () {
 <div id="what-is-virema" class="section level2">
 <h2><strong>What is ViReMa?</strong></h2>
 <p><strong>ViReMa</strong> is an algorithm developed by the <a href="https://www.utmb.edu/routhlab/home">Routh and Johnson Labs</a> providing <strong>“a versatile platform for rapid, sensitive and nucleotide-resolution detection of recombination junctions in viral genomes using next-generation sequencing data”</strong>. Code for ViReMa is written in Python and can be downloaded <a href="https://bioconda.github.io/recipes/virema/README.html">here</a>.</p>
-<p><strong>Read the original ViReMa paper:</strong><br> Andrew Routh, John E. Johnson, Discovery of functional genomic motifs in viruses with ViReMa-a Virus Recombination Mapper-for analysis of next-generation sequencing data, Nucleic Acids Research, Volume 42, Issue 2, 1 January 2014, Page e11, <a href="https://doi.org/10.1093/nar/gkt916" class="uri">https://doi.org/10.1093/nar/gkt916</a> <br><br></p>
+<p><strong>Read the original ViReMa paper:</strong><br> Andrew Routh, John E. Johnson, Discovery of functional genomic motifs in viruses with ViReMa-a Virus Recombination Mapper-for analysis of next-generation sequencing data, Nucleic Acids Research, Volume 42, Issue 2, 1 January 2014, Page e11, <a href="https://doi.org/10.1093/nar/gkt916" class="uri">https://doi.org/10.1093/nar/gkt916</a></p>
+<p><a href="https://app.dimensions.ai/discover/publication?or_subset_publication_citations=pub.1028483494"><strong>Read articles using ViReMa</strong></a></p>
+<p><br><br></p>
 <p><img src="files/plotExIntro.png" alt="Example plots from the Shiny app" /></p>
 </div>
 
