Update Links and Formatting

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ $(document).ready(function () {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:&lt;jasonyeung012@gmail.com&gt;">
+  <a href="mailto:&lt;routhlabgh@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -287,10 +287,11 @@ $(document).ready(function () {
 <div id="what-is-virema" class="section level2">
 <h2><strong>What is ViReMa?</strong></h2>
 <p><strong>ViReMa</strong> is an algorithm developed by the <a href="https://www.utmb.edu/routhlab/home">Routh and Johnson Labs</a> providing <strong>“a versatile platform for rapid, sensitive and nucleotide-resolution detection of recombination junctions in viral genomes using next-generation sequencing data”</strong>. Code for ViReMa is written in Python and can be downloaded <a href="https://sourceforge.net/projects/virema/">here</a>.</p>
-<p><strong>Read the updated ViReMa paper with vignettes:</strong> Sotcheff S, Zhou Y, Sun Y, Johnson JE, Torbett B, Routh AL. ViReMa: A Virus Recombination Mapper of Next-Generation Sequencing data characterizes diverse recombinant viral nucleic acids. bioRxiv. 2022:2022.03.12.484090. <a href="doi:10.1101/2022.03.12.484090" class="uri">doi:10.1101/2022.03.12.484090</a></p>
+<p><br></p>
+<p><strong>Read the updated ViReMa paper with vignettes:</strong><br> Sotcheff S, Zhou Y, Sun Y, Johnson JE, Torbett B, Routh AL. ViReMa: A Virus Recombination Mapper of Next-Generation Sequencing data characterizes diverse recombinant viral nucleic acids. bioRxiv. 2022:2022.03.12.484090. <a href="doi:10.1101/2022.03.12.484090" class="uri">doi:10.1101/2022.03.12.484090</a></p>
 <p><strong>Read the original ViReMa paper:</strong><br> Andrew Routh, John E. Johnson, Discovery of functional genomic motifs in viruses with ViReMa-a Virus Recombination Mapper-for analysis of next-generation sequencing data, Nucleic Acids Research, Volume 42, Issue 2, 1 January 2014, Page e11, <a href="https://doi.org/10.1093/nar/gkt916" class="uri">https://doi.org/10.1093/nar/gkt916</a></p>
 <p><br></p>
-<p><a href="https://app.dimensions.ai/discover/publication?or_subset_publication_citations=pub.1028483494"><strong>Read articles using ViReMa</strong></a></p>
+<p><a href="https://app.dimensions.ai/discover/publication?or_subset_publication_citations=pub.1028483494"><strong>Read more articles using ViReMa</strong></a></p>
 <p><br><br></p>
 <p><img src="files/plotExIntro.png" alt="Example plots from the Shiny app" /></p>
 </div>
