--- a/shinytutorial.html
+++ b/shinytutorial.html
@@ -332,7 +332,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="mailto:&lt;jasonyeung012@gmail.com&gt;">
+  <a href="mailto:&lt;routhlabgh@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
